hiep sua lai chut code

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
@@ -138,6 +138,9 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6 mb-30">
+                <button type="text" class="form-control" id="diachikhac">Chọn địa chỉ khác</button>
+            </div>
         </div>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
