--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
@@ -62,7 +62,7 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="header_links">
                                     <ul>
-                                        <li><a href="contact.html" title="Contact">Contact</a></li>
+                                        <li><a href="contact.html" title="Contact">Chính Sách</a></li>
                                         <li><a asp-action="HoaDonCuaToi" asp-controller="HoaDonCustomer" asp-area="Customer">Hóa đơn của tôi</a></li>
                                         <li><a href="my-account.html" title="My account">My account</a></li>
                                         <li><a href="cart.html" title="My cart">My cart</a></li>
