--- a/HN120_ShopQuanAo.View/Views/Home/DetailSP.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Home/DetailSP.cshtml
@@ -19,7 +19,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="~/js/locdetailnguoidung.js"></script>
-<input value="magiohang" />
 
 
 <!--product wrapper start-->
@@ -93,20 +92,9 @@ else
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="product_d_right">
-                        <h1>@sp.TenSP</h1>
-                        <div class="product_ratting mb-10">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-star"></i></a></li>
-                                <li><a href="#"><i class="fa fa-star"></i></a></li>
-                                <li><a href="#"><i class="fa fa-star"></i></a></li>
-                                <li><a href="#"><i class="fa fa-star"></i></a></li>
-                                <li><a href="#"><i class="fa fa-star"></i></a></li>
-                                <li><a href="#"> Write a review </a></li>
-                            </ul>
-                        </div>
+                        <h1>@sp.TenSP</h1>                      
                         <div class="product_desc">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati modi culpa voluptates illo, quos magni totam inventore delectus perspiciatis necessitatibus, iure rerum! Deleniti nobis voluptatibus minus, iusto ullam quae esse..</p>
-                        </div>
+                            <p>Các sản phẩm quần áo nam bên shop FBOIPOLY luôn mang đến sự trải nghiệm tốt cho khách hàng, Shop luôn biết ơn quý khách hàng đã dành thời gian ghé thăm shop quần áo Online. Mong rằng mọi người vẫn sẽ tiếp tục ủng hộ shop để shop phát triển lâu dài..</p>
 
                         <input id="maGH_input" value="@maGH" style="display:none">
                         <input id="tenSP_input" value="@sp.TenSP" style="display:none">
@@ -122,8 +110,8 @@ else
                                 <span id="quantity-error" style="color: red; display: none;">Số lượng nhập không được lớn hơn số lượng tồn.</span>
                             </form>
                             <button type="button"><a asp-action="Login" asp-controller="Home"><i class="fa fa-shopping-cart"></i>Add To Cart</a></button>
-                            <a href="#" title="add to wishlist"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                        </div>
+@*                            <a href="#" title="add to wishlist"><i class="fa fa-heart" aria-hidden="true"></i></a>
+*@                        </div>
                         <div class="product_d_size mb-20">
                             <label for="group_1">size</label>
                             <select name="size" id="group_1" style="max-width:30%" onchange="filterQuantity()">
