--- a/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
@@ -471,6 +471,7 @@
 					<script src="/js/ajax-mail.js"></script>
 					<script src="/js/plugins.js"></script>
 					<script src="/js/main.js"></script>
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script>
 
 
 </body>
