--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/CreateEmployeeAccount.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/CreateEmployeeAccount.cshtml
@@ -77,7 +77,7 @@
     </script>
 }
 <!-- Các phần còn lại của View vẫn giữ nguyên -->
-<form asp-action="CreateUserAccount" method="post" enctype="multipart/form-data">
+<form asp-action="CreateEmloyeeeAccount" method="post" enctype="multipart/form-data">
     <div class="container-xl px-4 mt-4">
         <div class="row">
             <!-- Avatar Upload Area -->
