hiep confirm huy don

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GioHangCuaBan.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GioHangCuaBan.cshtml
@@ -39,7 +39,7 @@
 									<tr>
 										<td class="hidden">@item.MaGHCT</td>
 										<td class="product_remove"><a asp-action="XoaSPGioHang" asp-controller="CustomerHome" asp-area="Customer" asp-route-maSP="@item.MaGHCT"><i class="fa fa-trash-o"></i></a></td>
-										<td class="product_thumb"><a href="#"><img src="~/photoSanPhamCT/@item.UrlAnhSPCT" alt=""></a></td>
+										<td class="product_thumb"><a href="#"><img src="~/photoSanPhamCT/@item.UrlAnhSPCT" style="width:40px;height:40px" alt=""></a></td>
 										<td class="product_name"><a href="#">@item.TenSP (@item.TenMau) (@item.TenSize)</a></td>
 										<td name="tien" class="product-price">@item.DonGia</td>
 										<td class="product_quantity">
