--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/HoaDonCustomer/XemChiTietHoaDon.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/HoaDonCustomer/XemChiTietHoaDon.cshtml
@@ -3,23 +3,24 @@
 @using HN120_ShopQuanAo.View.Areas.Customer.Data;
 @{
     Layout = "~/Areas/Customer/Views/Shared/_LayoutHoadonCustomer.cshtml";
-    List<HoaDonChiTiet> lstHDCB = ViewBag.lstSPDH as List<HoaDonChiTiet>;
+    List<HDCTViewModels> lstHDCB = ViewBag.JoinedData as List<HDCTViewModels>;
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js" integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/styles/metro/notify-metro.css" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 <style>
@@ -92,6 +93,7 @@
     <table class="styled-table">
         <thead>
             <tr>
+                <th>Ảnh</th>
                 <th>Tên Sản Phẩm</th>
                 <th>Số Lượng Mua</th>
                 <th>Thành Tiền</th>
@@ -101,9 +103,10 @@
             @foreach (var item in lstHDCB)
             {
                 <tr>
-                    <td>@item.TenSp</td>
-                    <td>@item.SoLuongMua</td>
-                    <td name="tien">@item.DonGia</td>
+                    <td><img src="~/photoSanPhamCT/@item.UrlAvatar" style="width:40px;height:40px" alt=""></td>
+                    <td>@item.TenSP (@item.TenSize) (@item.TenMau)</td>
+                    <td>@item.SoLuong</td>
+                    <td name="tien">@item.Dongia</td>
                 </tr>
             }
         </tbody>
