--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ChatLieu/AllChatLieuManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ChatLieu/AllChatLieuManager.cshtml
@@ -24,10 +24,12 @@
         <tr>
             <th>Mã Chất Liệu</th>
             <th>Tên Chất Liệu</th>
+            <th>Trạng thái</th>
             <th>Hành Động</th>
         </tr>
     </thead>
     <tbody>
+        
         @foreach (var item in Model)
         {
                 <tr>
@@ -36,7 +38,6 @@
                     <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
 
                     <td>
-                        <a asp-action="UpdateChatLieu" asp-route-id="@item.MaChatLieu" class="btn btn-warning">Cập Nhật</a>
                     @if (item.TrangThai == 1)
                     {
                                 <form asp-action="UpdateStatusChatLieuKKD" method="post" style="display:inline;">
@@ -72,7 +73,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="btn_save">Save changes</button>
+                <button type="button" class="btn btn-primary" id="btn_save">Thêm</button>
             </div>
         </div>
     </div>
@@ -82,6 +83,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script>
 $(document).ready(function () {
+    var specialCharPattern = /[!#\$%\^\&*\)\(+=._-]+/g; // Biểu thức kiểm tra kí tự đặc biệt
+
     // Hiển thị modal thêm chất liệu mới
     $('#btn_add').on('click', function () {
         setdata(null);
@@ -90,7 +93,23 @@ $(document).ready(function () {
 
     // Lưu chất liệu mới
     $('#btn_save').on('click', function () {
-        $.post('/Admin/ChatLieu/CreateChatLieu', { TenChatLieu: $('#name').val() }, function (response) {
+        var tenChatLieu = $('#name').val().trim();
+        var checktenChatLieu = tenChatLieu.toUpperCase();
+
+        if (!tenChatLieu) {
+            alert('Vui lòng nhập tên chất liệu.');
+            return;
+        }
+        if (specialCharPattern.test(tenChatLieu)) {
+            alert('Tên chất liệu không được nhập kí tự đặc biệt.');
+            return;
+        }
+        if (tenChatLieu.length > 50) {
+            alert('Tên chất liệu không được nhập quá 50 kí tự.');
+            return;
+        }
+
+        $.post('/Admin/ChatLieu/CreateChatLieu', { TenChatLieu: tenChatLieu }, function (response) {
             if (response) {
                 alert("Thêm thành công!");
                 $('#pp_modal').modal('hide');
@@ -106,4 +125,5 @@ $(document).ready(function () {
 function setdata(data) {
     $('#name').val('');
 }
+
 </script>
