--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/AllMauSacManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/MauSac/AllMauSacManager.cshtml
@@ -28,7 +28,6 @@
         <tr>
             <th>Mã </th>
             <th>Tên </th>
-            <th>Mo ta</th>
             <th>Trạng Thái</th>
             <th>Hành Động</th>
         </tr>
@@ -43,7 +42,7 @@
                <td>@item.MoTa</td>
                <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
           <td>
-                <a asp-action="UpdateMauSac" asp-route-id="@item.MaMau" class="btn btn-warning">Cập Nhật</a>
+                @*<a asp-action="UpdateMauSac" asp-route-id="@item.MaMau" class="btn btn-warning">Cập Nhật</a>*@
 
                     @if (item.TrangThai == 1)
                     {
@@ -81,7 +80,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="btn_save">Save changes</button>
+                <button type="button" class="btn btn-primary" id="btn_save">Thêm</button>
             </div>
         </div>
     </div>
@@ -91,15 +90,33 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script>
 $(document).ready(function () {
-    // Hiển thị modal thêm chất liệu mới
+    var specialCharPattern = /[!#\$%\^\&*\)\(+=._-]+/g; // Biểu thức kiểm tra kí tự đặc biệt
+
+    // Hiển thị modal thêm màu sắc mới
     $('#btn_add').on('click', function () {
         setdata(null);
         $('#pp_modal').modal('show');
     });
 
-    // Lưu chất liệu mới
+    // Lưu màu sắc mới
     $('#btn_save').on('click', function () {
-        $.post('/Admin/MauSac/CreateMauSac', { TenMau: $('#name').val() }, function (response) {
+        var tenMau = $('#name').val().trim();
+        var checktenMau = tenMau.toUpperCase();
+
+        if (!tenMau) {
+            alert('Vui lòng nhập tên màu.');
+            return;
+        }
+        if (specialCharPattern.test(tenMau)) {
+            alert('Tên màu không được nhập kí tự đặc biệt.');
+            return;
+        }
+        if (tenMau.length > 50) {
+            alert('Tên màu không được nhập quá 50 kí tự.');
+            return;
+        }
+
+        $.post('/Admin/MauSac/CreateMauSac', { TenMau: tenMau }, function (response) {
             if (response) {
                 alert("Thêm thành công!");
                 $('#pp_modal').modal('hide');
@@ -115,4 +132,5 @@ $(document).ready(function () {
 function setdata(data) {
     $('#name').val('');
 }
+
 </script>
