--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/TheLoai/AllTheLoaiManager.cshtml
@@ -27,7 +27,6 @@
         <tr>
             <th>Mã </th>
             <th>Tên </th>
-            <th>Mô Tả</th>
             <th>Trạng Thái</th>
             <th>Hành Động</th>
         </tr>
@@ -38,11 +37,10 @@
                         <tr>
                                 <td>@item.MaTheLoai</td>
                                 <td>@item.TenTheLoai</td>
-                            <td>@item.MoTa</td>
                                 <td>@(item.TrangThai == 1 ? "Khả Dụng" : "Không Khả Dụng")</td>
                             <td>
 
-                                        <a asp-action="UpdateTheLoai" asp-route-id="@item.MaTheLoai" class="btn btn-warning">Cập Nhật</a>
+                                        @*<a asp-action="UpdateTheLoai" asp-route-id="@item.MaTheLoai" class="btn btn-warning">Cập Nhật</a>*@
                     @if (item.TrangThai == 1)
                     {
                                                         <form asp-action="UpdateStatusTheLoaiKKD" method="post" style="display:inline;">
@@ -80,7 +78,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="btn_save">Save changes</button>
+                <button type="button" class="btn btn-primary" id="btn_save">Thêm</button>
             </div>
         </div>
     </div>
@@ -90,15 +88,33 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script>
 $(document).ready(function () {
-    // Hiển thị modal thêm chất liệu mới
+    var specialCharPattern = /[!#\$%\^\&*\)\(+=._-]+/g; // Biểu thức kiểm tra kí tự đặc biệt
+
+    // Hiển thị modal thêm thể loại mới
     $('#btn_add').on('click', function () {
         setdata(null);
         $('#pp_modal').modal('show');
     });
 
-    // Lưu chất liệu mới
+    // Lưu thể loại mới
     $('#btn_save').on('click', function () {
-        $.post('/Admin/TheLoai/CreateTheLoai', { TenTheLoai: $('#name').val() }, function (response) {
+        var tenTheLoai = $('#name').val().trim();
+        var checktenTheLoai = tenTheLoai.toUpperCase();
+
+        if (!tenTheLoai) {
+            alert('Vui lòng nhập tên thể loại.');
+            return;
+        }
+        if (specialCharPattern.test(tenTheLoai)){
+            alert('Tên thể loại không được nhập kí tự đặc biệt.');
+            return;
+        }
+        if (tenTheLoai.length > 50) {
+            alert('Tên thể loại không được nhập quá 50 kí tự.');
+            return;
+        }
+
+        $.post('/Admin/TheLoai/CreateTheLoai', { TenTheLoai: tenTheLoai }, function (response) {
             if (response) {
                 alert("Thêm thành công!");
                 $('#pp_modal').modal('hide');
