--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
@@ -271,6 +271,7 @@
         </div>
     </div>
     <input style="display:none" id="btn_mahoadon" value="@Model.MaHoaDon" />
+        <input style="display:none" id="btnnguoitacdong" value="@user.UserName" />
     <hr />
         <table class="table table-bordered" id="table_hoadon">
 
