--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -185,11 +185,11 @@
                                 <span class="hide-menu">Danh sách hóa đơn</span>
                             </a>
                         </li>
-                        <li class="sidebar-item">
+                       @*  <li class="sidebar-item">
                             <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
                                 <span class="hide-menu">Lịch sử hóa đơn</span>
                             </a>
-                        </li>
+                        </li> *@
                         <li class="nav-small-cap">
                             <i class="bi bi-tags"></i>
                             <span class="hide-menu">Giảm giá</span>
@@ -202,14 +202,14 @@
                                 <span class="hide-menu">Danh sách Voucher</span>
                             </a>
                         </li>
-                        <li class="sidebar-item">
+                       @*  <li class="sidebar-item">
                             <a class="sidebar-link" asp-action="AllKhuyenMaiManager" asp-controller="KhuyenMai" asp-area="Admin">
                                 <span>
                                     <i class="bi bi-percent"></i>
                                 </span>
                                 <span class="hide-menu">Danh sách khuyến mãi</span>
                             </a>
-                        </li>
+                        </li> *@
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
