--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets\img\favicon.png">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script>
     <!-- all css here -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -366,6 +366,7 @@
     </div>
     <!--footer area end-->
     <!-- all js here -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script>
     <script src="assets\js\vendor\jquery-1.12.0.min.js"></script>
     <script src="assets\js\popper.js"></script>
     <script src="assets\js\bootstrap.min.js"></script>
